Sat Aug 04 08:16:01 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Add convenience methods for checking
	  if a particular field can be collapsed or sorted on.

Sat Aug 04 03:09:32 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst,secore/: Reorganise field structures,
	  allowing us to support multiple occurrences of facets of string
	  type for a single document.  This change requires all databases
	  to be rebuilt.  Tests updated accoringly.  Also, requires latest
	  SVN HEAD build of xapian.

Wed Aug 01 14:45:41 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection_doctest2.txt: Test for multiple facet
	  values in a single document (currently fails, due to this not
	  being supported correctly yet)

Wed Aug 01 14:23:24 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection_doctest2.txt: More tests, including a
	  regression test for bug with facet calculation on database with
	  no facet fields defined.

Wed Aug 01 12:43:57 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection_doctest2.txt: Improve test coverage.

Wed Aug 01 12:28:48 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Fix bug when facet calculation is
	  requested, but no facet fields are present in the database (used
	  to throw an exception when the list of suggested facets was
	  requested in this case - now it just returns an empty list).

Tue Jul 31 08:34:49 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/indexerconnection_doctest2.txt,secore/searchconnection.py,
	  secore/searchconnection_doctest3.txt: Improve test coverage - in
	  particular, add tests of various conditions which cause errors.

Mon Jul 30 16:10:52 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/datastructures.py,secore/datastructures_doctest1.txt: